# http-patterns-rs

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: automerge.yml  ci.yml
warp-users-proxy/: Cargo.toml  README.md
warp-users-proxy/src/: error.rs  filters.rs  handlers.rs  main.rs  models.rs
warp-users-proxy/src/handlers/: users.rs
