[package]
name = "warp-users-proxy"
version = "0.1.0"
authors = ["Nicholas Young <nicholas@nicholaswyoung.com>"]
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.10"
hyper = "0.14.1"
listenfd = "0.3.3"
reqwest = { version = "0.10.10", features = ["json"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
thiserror = "1.0.23"
tokio = { version = "0.2.24", features = ["rt-threaded", "macros"] }
tracing = "0.1.22"
validator = { version = "0.12.0", features = ["derive"] }
warp = "0.2.5"

[[bin]]
name = "warp-users-proxy"
path = "src/main.rs"
