[package]
name = "warp-users-proxy"
version = "0.1.0"
authors = ["Nicholas Young <nicholas@nicholaswyoung.com>"]
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.4", features = ["server", "http1", "http2"] }
listenfd = "0.3.3"
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
thiserror = "1.0.24"
tokio = { version = "1.2.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.24"
tracing-subscriber = "0.2.15"
validator = { version = "0.12.0", features = ["derive"] }
warp = "0.2.5"

[[bin]]
name = "warp-users-proxy"
path = "src/main.rs"
