[package]
name = "warp-users-proxy"
version = "0.1.0"
authors = ["Nicholas Young <nicholas@nicholaswyoung.com>"]
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.7", features = ["server", "http1", "http2"] }
listenfd = "0.3.5"
reqwest = { version = "0.11.3", features = ["json", "rustls"] }
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.66"
thiserror = "1.0.26"
tokio = { version = "1.10.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
validator = { version = "0.14.0", features = ["derive"] }
warp = "0.2.5"

[[bin]]
name = "warp-users-proxy"
path = "src/main.rs"
